[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "django-extra"
version = "0.0.1"
authors = [
  { name="Abhishek Sharma", email="abhishm20@gmail.com" },
]
description = "A small Django DRF extension library which includes some useful utilities, APIs, Serializers and Services."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/abhishm20/django-extra"
"Bug Tracker" = "https://github.com/abhishm20/django-extra/issues"

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |Dockerfile
  |Jenkinfile
)/
'''


[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
default_section = "THIRDPARTY"
known_first_party = []
known_third_party = ["boto3", "django", "django_filters", "jwt", "moment", "rest_framework", "rest_framework_extensions", "unidecode"]
